# zk-lense

./: Cargo.toml  Commands.txt  DEPLOY.md  INSTALL.md  README.md  RUNNING.md  netlify.toml
.github/: Formula-zklense-corrected.rb  Formula-zklense.rb  homebrew-zklense.rb  scoop-zklense.json
.github/workflows/: build.yml  release.yml
cli/: Cargo.toml  Makefile  README.md
cli/docs/: generate.md
cli/src/: commands.rs  main.rs  ui.rs
cli/src/commands/: config.rs  emoji.rs  generate.rs  hello.rs  init.rs  loading.rs  progress.rs  run.rs  simulate.rs  table.rs  version.rs  view.rs
cli/src/templates/: age_verifier.nr  hash_preimage.nr  merkle_inclusion.nr  range_proof.nr
cli/templates/: age_verifier.nr
scripts/: release.sh  verify-binaries.sh
src/: main.rs
test_project/.zkproof/: config.toml  report.json
zkprof-web-app/: netlify.toml  package-lock.json  package.json
zkprof-web-app/src/: App.css  App.js
