[package]
name = "zklense"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
comfy-table = "7"
console = "0.15"
anyhow = "1.0.100"
solana-client = "3.1.7"
solana-sdk = "3.0.0"
solana-commitment-config = "3.1.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
tokio = "1.49.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
webbrowser = "1.0"
bincode = "1.3"
dialoguer = "0.12.0"
