[package]
name = "zklense"
version = "0.1.2"
edition = "2024"
authors = ["Jinali Pabasara <jinalipabasara@gmail.com>","Nethsara Siyum <nethsarasiyum2@gmail.com>", "Gihan Siriwardhana <gihanrcg1997@gmail.com>", "Nissanka Seneviratne <nyshsolutions@gmail.com>"]
description = "A command-line tool for profiling, building, and deploying zero-knowledge proofs built with Noir for Solana Blockchain"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jinali98/zk-lense"
homepage = "https://github.com/jinali98/zk-lense"
documentation = "https://github.com/jinali98/zk-lense#readme"
keywords = ["zk", "zero-knowledge", "noir", "solana", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "zklense"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
comfy-table = "7"
console = "0.15"
anyhow = "1.0.100"
solana-client = "3.1.7"
solana-sdk = "3.0.0"
solana-commitment-config = "3.1.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
tokio = "1.49.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
webbrowser = "1.0"
bincode = "1.3"
dialoguer = "0.12.0"
